<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Web Android IDE</string>
    <string name="you_no_have_projects">You have no projects</string>
    <string name="new_project">New project</string>
    <string name="create_project">Create project</string>
    <string name="project_name">Project name</string>
    <string name="project_name_cannot_be_empty">Project name can\'t be empty</string>
    <string name="project_successful_created">Project successfully created</string>
    <string name="failed_to_create_project">Failed to create project</string>
    <string name="project_already_exists">Project already exists</string>
    <string name="cancel">Cancel</string>
    <string name="more">More</string>
    <string name="refresh">Refresh</string>
    <string name="remove">Remove</string>
    <string name="create">Create</string>
    <string name="invalid_filename">Invalid name</string>
    <string name="new_file_folder">New File/Folder</string>
    <string name="file">File</string>
    <string name="file_name">File name</string>
    <string name="mkdir">Make directory</string>
    <string name="create_file">Create file</string>
    <string name="rename_file">Rename file</string>
    <string name="rename_folder">Rename folder</string>
    <string name="folder_name_cannot_be_empty">Folder name can\'t be empty</string>
    <string name="file_name_cannot_be_empty">File name can\'t be empty</string>
    <string name="folder_name">Folder name</string>
    <string name="folder">Folder</string>
    <string name="file_already_exists">File already exists</string>
    <string name="folder_already_exists">Folder already exists</string>
    <string name="delete">Delete</string>
    <string name="rename">Rename</string>
    <string name="rename_project">Rename project</string>
    <string name="file_tree">File tree</string>
    <string name="settings">Settings</string>
    <string name="exit">Exit</string>
    <string name="run">Run</string>
    <string name="link">Link</string>
    <string name="copy">Copy</string>
    <string name="indent_size">Indent size</string>
    <string name="use_tabs">Using tab</string>
    <string name="search_hint">Search...</string>
    <string name="preview">Preview</string>
    <string name="source">Source</string>
    <string name="dev_tools">Dev tools</string>
    <string name="editor_font">Editor font</string>
    <string name="editor_font_summary">Font for code editor. (Reccomended restart app after change)</string>
    <string name="format">Format</string>
    <string name="color_picker">Color picker</string>
    <string name="close_it">Close this</string>
    <string name="editor">Code editor</string>
    <string name="save_all">Save all</string>
    <string name="close_other">Close others</string>
    <string name="close_all">Close all</string>
    <string name="you_no_have_open_files">You have no open files</string>
    <string name="copying_assets">Copying assets...</string>
    <string name="recopy_assets">Recopy assets</string>
    
    <string name="general">General</string>
    <string name="app_theme">Application theme</string>
    <string name="app_theme_summary">Select theme for application. Restart app after change theme!</string>
    <string name="dark_theme">Dark theme</string>
    <string name="light_theme">Light theme</string>
    <string name="system_theme">System theme</string>

    <string name="app_dialog_type">Application dialog type</string>
    <string name="app_dialog_type_summary">Select dialog type for application</string>
    <string name="app_dialog_type_material">Material3 dialog</string>
    <string name="app_dialog_type_androidx">AndroidX dialog</string>
    <string name="app_dialog_type_neo">Neo dialog</string>

    <string name="downloading_page_content">Downloading page content...</string>
    
    <string name="settings_categories">Categories</string>
    <string name="general_settings_summary">Appearance and behavior settings</string>
    <string name="editor_settings_summary">Code editor preferences</string>
    <string name="editor_use_tab">Use tabs for indentation</string>
    <string name="editor_use_tab_summary">Use tab characters instead of spaces for indentation</string>
    <string name="editor_indent_size">Indentation size</string>
    <string name="editor_indent_size_summary">Number of spaces for indentation (if tabs are disabled)</string>
    <string name="editor_theme">Editor color scheme</string>
    <string name="editor_theme_summary">Editor color scheme for code editor. (Reccomended restart app after change)</string>
</resources>