<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/general">
        <org.xedox.utils.preference.MaterialListPreference
            android:key="app_theme"
            android:title="@string/app_theme"
            android:summary="@string/app_theme_summary"
            android:entries="@array/theme_entries"
            android:entryValues="@array/theme_values"
            android:defaultValue="SYSTEM"
            android:icon="@drawable/app_theme" />
        <org.xedox.utils.preference.MaterialListPreference
            android:key="app_dialog_type"
            android:title="@string/app_dialog_type"
            android:summary="@string/app_dialog_type_summary"
            android:entries="@array/app_dialog_type_entries"
            android:entryValues="@array/app_dialog_type_values"
            android:defaultValue="MATERIAL" />
    </PreferenceCategory>
</PreferenceScreen>
