<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    
    <group
        android:id="@+id/fragments">
        <item
            android:id="@+id/action_file_tree"
            android:icon="@drawable/file_tree"
            android:title="@string/file_tree"
            android:checkable="true"
            app:showAsAction="ifRoom" />
    </group>
   
    <item
        android:id="@+id/divider"
        android:title=""
        android:enabled="false"
        app:showAsAction="never" />
    
    <group
        android:id="@+id/actions">
        <item
            android:id="@+id/action_settings"
            android:icon="@drawable/settings"
            android:title="@string/settings"
            android:checkable="false"
            app:showAsAction="ifRoom" />
        <item
            android:id="@+id/action_exit"
            android:icon="@drawable/exit"
            android:title="@string/exit"
            android:checkable="false"
            app:showAsAction="ifRoom" />
    </group>
</menu>