<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:title="@string/app_name"
        app:titleCentered="true" />

    <LinearLayout
        android:id="@+id/actions"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_below="@id/toolbar"
        android:orientation="horizontal"
        android:padding="8dp"
        android:gravity="end|center_vertical">

        <ImageButton
            android:id="@+id/new_project"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/plus"
            style="@style/Widget.AppCompat.ActionButton"
            android:contentDescription="@string/new_project" />
        <ImageButton
            android:id="@+id/settings"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/settings"
            style="@style/Widget.AppCompat.ActionButton"
            android:contentDescription="@string/settings" />
        <ImageButton
            android:id="@+id/dev_tools"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/dev"
            style="@style/Widget.AppCompat.ActionButton"
            android:contentDescription="@string/dev_tools" />
    </LinearLayout>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        android:layout_below="@id/actions"
        android:layout_marginTop="8dp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/projects_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/divider"
        android:padding="8dp" />

    <include
        android:id="@+id/empty_projects_recycler_layout"
        layout="@layout/empty_projects_recycler_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/divider"
        android:visibility="gone" />
</RelativeLayout>
